# X-Trader

./: .clang-format  .gitignore  CMakeLists.txt  README.md
api/tora/v4.0.8/linux64/: TORATstpLev2ApiStruct.h
api/tora/v4.0.8/win64/: TORATstpLev2ApiDataType.h  TORATstpLev2MdApi.h  fasttraderapi.lib  lev2mdapi.lib
api/xtp/v6.6.9/linux64/: algo_data_type.h  xtp_api_data_type.h  xtp_quote_api.h
api/xtp/v6.6.9/win64/: algo_api_struct.h  xoms_api_struct.h  xquote_api_struct.h  xtp_trader_api.h
doc/tora/: lev2mdapi.txt
doc/xtp/: TraderXTP.cpp  quote.md  trader.md
ini/tora/: test.ini
src/: CMakeLists.txt
src/backtest/: CMakeLists.txt  replay_runner.cpp  replay_runner.h  sim_trader.cpp  sim_trader.h  tick_reader.cpp  tick_reader.h
src/bench/: CMakeLists.txt  bench_types.h  benchmark_runner.cpp  benchmark_runner.h  config.cpp  config.h  main.cpp  market_data_receiver.cpp  market_data_receiver.h  report_generator.cpp  report_generator.h  result_statistics.cpp  result_statistics.h  strategy_executor.cpp  strategy_executor.h
src/framework/: CMakeLists.txt  frame.cpp  realtime.cpp  resample.cpp  strategy.cpp
src/include/: data_struct.h  define.h  frame.h  interface.h  realtime.h  resample.h  strategy.h
src/strategy/: CMakeLists.txt  board_queue.cpp  board_queue.example.ini  board_queue.h  limitup_strategy.cpp  limitup_strategy.h  main.cpp  market_correction.h  market_making.cpp  market_making.h  order_flow.h  percent_change_strategy.cpp  percent_change_strategy.h  statistical_arbitrage.h  strategy_loader.cpp  strategy_loader.h
src/strategy/risk/: cancel_rate_guard.cpp  cancel_rate_guard.h  position_sizer.cpp  position_sizer.h  risk_guard.cpp  risk_guard.h
src/test/config/: CMakeLists.txt  json_read.cpp
src/test/integration/: CMakeLists.txt  limitup_replay_test.cpp
src/test/tora/: CMakeLists.txt  tora_market_test.cpp  tora_trader_test.cpp
src/test/unit/: CMakeLists.txt  risk_unit_test.cpp
src/test/xtp/: CMakeLists.txt  xtp_market_test.cpp  xtp_test.cpp  xtp_trader_test.cpp
src/trade-core/: CMakeLists.txt  interface.cpp
src/trade-core/market/: ctp_market.cpp  ctp_market.h  tora_market.cpp  tora_market.h  xtp_market.cpp  xtp_market.h
src/trade-core/trader/: ctp_trader.cpp  ctp_trader.h  tora_trader.cpp  tora_trader.h  xtp_trader.cpp  xtp_trader.h
src/utils/: INIReader.h  cpu_utils.hpp  dyn_lib_loader.h  event_center.hpp  market_api.h  ringbuffer.hpp  trader_api.h
